fixed layout issue with drop down menu

--- a/src/styles/components/_navBarLinks.scss
+++ b/src/styles/components/_navBarLinks.scss
@@ -65,6 +65,7 @@
 			justify-content: center;
 			align-items: center;
 			width: 2rem;
+			height: 100%;
 		}
 
 		&.active {
